fixing overflow in mobile

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,6 +4,9 @@
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+  overflow-y:none;
+}
 body {
   background-color: #282c34;
 }
